feat: YouTube 트렌드 데이터 수집 서비스 주요 기능 구현
- YouTube API 연동 서비스 구현 (YoutubeDataService, YoutubeSearchService)
- 트렌드 데이터 수집 및 저장 기능 추가
- Rails Admin 인터페이스 구현
- 관리자 및 DB 관리 컨트롤러 추가
- 검색 기능 구현
- 프론트엔드 UI 개선 (trending/index, search 페이지)
- 데이터베이스 스키마 업데이트
- 관리자 계정 생성 스크립트 추가
- 테스트 환경 설정 (RSpec, factories)
- 프로젝트 문서화 (CODE_MAP.md)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,9 @@
               <%= link_to "홈", root_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
+              <%= link_to "검색", search_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
               <%= link_to "관리자", admin_root_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
