--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
 
     <%= yield :head %>
 
@@ -62,19 +65,63 @@
         </button>
         
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav me-auto">
             <li class="nav-item">
               <%= link_to "홈", root_path, class: "nav-link" %>
             </li>
-            <li class="nav-item">
-              <%= link_to "검색", search_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "관리자", admin_root_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "API", "/api/v1/trending", class: "nav-link", target: "_blank" %>
-            </li>
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "검색", search_path, class: "nav-link" %>
+              </li>
+              <% if current_user.admin? %>
+                <li class="nav-item">
+                  <%= link_to "관리자", admin_root_path, class: "nav-link" %>
+                </li>
+              <% end %>
+            <% end %>
+          </ul>
+          
+          <ul class="navbar-nav ms-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                  <i class="fas fa-user me-1"></i>
+                  <%= current_user.display_name %>
+                  <% if current_user.admin? %>
+                    <span class="badge bg-danger ms-1">관리자</span>
+                  <% end %>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to profile_path, class: "dropdown-item" do %>
+                      <i class="fas fa-user me-2"></i>프로필
+                    <% end %>
+                  </li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li>
+                    <%= link_to logout_path, 
+                          class: "dropdown-item text-danger",
+                          data: { 
+                            "turbo-method" => "delete",
+                            "turbo-confirm" => "정말 로그아웃하시겠습니까?"
+                          } do %>
+                      <i class="fas fa-sign-out-alt me-2"></i>로그아웃
+                    <% end %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to login_path, class: "nav-link" do %>
+                  <i class="fas fa-sign-in-alt me-1"></i>로그인
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to signup_path, class: "nav-link" do %>
+                  <i class="fas fa-user-plus me-1"></i>회원가입
+                <% end %>
+                </li>
+            <% end %>
           </ul>
         </div>
       </div>
