Fix admin routing helper error - Change admin_path to admin_root_path in admin controller and views

--- a/app/views/admin/admin/database_query.html.erb
+++ b/app/views/admin/admin/database_query.html.erb
@@ -12,7 +12,7 @@
           <p class="text-muted">읽기 전용 SELECT 쿼리만 허용됩니다</p>
         </div>
         <div>
-          <%= link_to "← 관리자 대시보드", admin_path, class: "btn btn-outline-secondary" %>
+          <%= link_to "← 관리자 대시보드", admin_root_path, class: "btn btn-outline-secondary" %>
         </div>
       </div>
     </div>
