feat: 메가히트 섹션 및 UI 개선
- 메가히트 섹션 중복 영상 제거 (video_id 기준)
- 메가히트 개수 배지 제거로 깔끔한 헤더
- 지역 코드 한국어 표기 (VN베트남, ID인도네시아 등)
- 나눔고딕 폰트 적용으로 한글 가독성 향상
- 영상 통계 텍스트 라벨 제거 (조회수, 좋아요, 댓글, 업로드)
- 일반 영상 그리드 4열로 변경 (5열4열)

UI/UX 개선으로 더 깔끔하고 사용자 친화적인 인터페이스 구현

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -391,8 +391,8 @@
                       <!-- 콘텐츠 섹션 -->
                       <div class="video-content">
                         <h3 class="video-title">
-                          <%= link_to video[:watch_url], target: "_blank", class: "title-link" do %>
-                            <%= video[:title] %>
+                          <%= link_to video[:watch_url], target: "_blank", class: "title-link", title: video[:title] do %>
+                            <%= truncate(video[:title], length: 30) %>
                           <% end %>
                         </h3>
                         
@@ -404,7 +404,7 @@
                           
                           <div class="publish-date">
                             <i class="fas fa-calendar-alt"></i>
-                            <%= video[:published_at].strftime("%Y년 %m월 %d일") %>
+                            <%= korean_time_ago(video[:published_at]) %>
                           </div>
                         </div>
                         
@@ -413,19 +413,16 @@
                           <div class="stat-item views">
                             <i class="fas fa-eye"></i>
                             <span class="stat-value"><%= YoutubeSearchService.format_view_count(video[:view_count]) %></span>
-                            <span class="stat-label">조회수</span>
                           </div>
                           
                           <div class="stat-item likes">
                             <i class="fas fa-thumbs-up"></i>
                             <span class="stat-value"><%= number_with_delimiter(video[:like_count]) %></span>
-                            <span class="stat-label">좋아요</span>
                           </div>
                           
                           <div class="stat-item comments">
                             <i class="fas fa-comment"></i>
                             <span class="stat-value"><%= number_with_delimiter(video[:comment_count]) %></span>
-                            <span class="stat-label">댓글</span>
                           </div>
                         </div>
                         
@@ -812,13 +809,6 @@
     font-weight: 600;
     font-size: 0.9rem;
     color: #1a1a1a;
-  }
-  
-  .stat-label {
-    font-size: 0.7rem;
-    color: #666;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
   }
   
   /* 설명 */
